--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
+    align-items: center;
+    text-align: center;
     }
     
     .principal-botao {
@@ -45,7 +47,7 @@
     }
 
     .principal-aviso{
-        font-size: 14px;
+        font-size: 12px;
         color:var(--cinza-secundario);
     }
     .principal-imagem{
