--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
     --cinza-secundario: #c0c0c0;
     --botao-azul: #167bf7;
     --cor-de-fundo: #00030c;
-    --fonte-principal:'Inter';
-
+    --fonte-principal: 'Inter';
     }
     
     body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
     }
     
     .principal{
@@ -30,6 +32,8 @@
     padding: 16px;
     text-decoration: none;
     display:block;
+    margin-bottom: 16px;
+    
     }
     .principal-botao-2 {
     background-color: transparent;
@@ -39,21 +43,25 @@
     padding: 16px;
     text-decoration: none;
     display: block;
+    margin-bottom: 16px;
+    
     }
-
+    
     .principal-titulo{
-        font-size: 20px;
-        font-weight: 700;
+    font-size: 28px;
+    font-weight: 700;
+    
     }
-
+    
     .principal-aviso{
-        font-size: 12px;
-        color:var(--cinza-secundario);
+    font-size: 12px;
+    color: var(--cinza-secundario);
     }
+    
     .principal-imagem{
-        margin: 16px 0 32px 0;
+    margin: 16px 0 32px 0;
     }
-
+    
     .principal-caixa{
-        margin: 0 96px;
+    margin: 0 96px;
     }
