--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@
     .principal-titulo{
     font-size: 28px;
     font-weight: 700;
-    
     }
     
     .principal-aviso{
@@ -64,4 +63,15 @@
     
     .principal-caixa{
     margin: 0 96px;
+    }
+
+    .secundaria{
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    }
+
+    .secundaria-imagem{
+        width: 80%;
     }
