--- a/style.css
+++ b/style.css
@@ -80,3 +80,7 @@
         font-weight: 700;
         font-size: 48px;
     }
+
+    .secundaria-texto{
+        color: var(--cinza-secundario);
+    }
