--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 :root{
-    --branco-principal: #FFFFFF;
+    --branco-principal: white;
     --cinza-secundario: #c0c0c0;
-    --botao-azul: #167bf7;
-    --cor-de-fundo: #00030c;
+    --botao-azul: blue;
+    --cor-de-fundo: black;
     --fonte-principal: 'Inter';
-    }
-    
-    body {
+}
+
+body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
-    }
-    
-    .principal{
+
+}
+
+.principal{
     background-image: url("Background.png");
     background-size: contain;
     background-repeat: no-repeat;
@@ -23,19 +24,19 @@
     grid-template-columns: 50% 50%;
     align-items: center;
     text-align: center;
-    }
-    
-    .principal-botao {
+}
+
+.principal-botao{
     background-color: var(--botao-azul);
     color: var(--branco-principal);
     border-radius: 5px;
     padding: 16px;
     text-decoration: none;
-    display:block;
+    display: block;
     margin-bottom: 16px;
     
-    }
-    .principal-botao-2 {
+}
+.principal-botao-2{
     background-color: transparent;
     border: 1px solid var(--branco-principal);
     color: var(--branco-principal);
@@ -44,49 +45,52 @@
     text-decoration: none;
     display: block;
     margin-bottom: 16px;
-    
-    }
-    
-    .principal-titulo{
+}
+
+.principal-titulo{
     font-size: 28px;
     font-weight: 700;
-    }
-    
-    .principal-aviso{
+
+
+
+
+}
+
+.principal-aviso{
     font-size: 12px;
     color: var(--cinza-secundario);
-    }
-    
-    .principal-imagem{
-    margin: 16px 0 32px 0;
-    }
-    
-    .principal-caixa{
-    margin: 0 96px;
-    }
+}
 
-    .secundaria{
+.principal-imagem{
+    margin: 16px 0 32px 0;
+}
+
+.principal-caixa{
+    margin: 0 96px;
+}
+
+.secundaria{
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
     align-items: center;
     margin: 0 100px;
-    }
+}
 
-    .secundaria-imagem{
-        width: 80%;
-    }
+.secundaria-imagem{
+    width: 80%;
+}
 
-    .secundaria-titulo{
-        font-weight: 700;
-        font-size: 48px;
-    }
+.secundaria-titulo{
+    font-weight: 700;
+    font-size: 48px;
+}
 
-    .secundaria-texto{
-        color: var(--cinza-secundario);
-    }
+.secundaria-texto{
+    color: var(--cinza-secundario);
+}
 
-    .secundario-botao{
-        display: inline-block;
-        margin-top: 16px
-    }
+.secundaria-botao{
+    display: inline-block;
+    margin-top: 16px;
+}
