--- a/style.css
+++ b/style.css
@@ -94,3 +94,13 @@ body {
     display: inline-block;
     margin-top: 16px;
 }
+
+.dispositivos-lista{
+    display: flex;
+    list-style-type: nome;
+    margin: 80px 0;
+}
+
+.dispositivos{
+    text-align: center;
+}
