--- a/style.css
+++ b/style.css
@@ -97,11 +97,19 @@ body {
 
 .dispositivos-lista{
     display: flex;
-    list-style-type: nome;
+    list-style-type: none;
     margin: 80px 0;
     justify-content: center;
 }
 
 .dispositivos{
     text-align: center;
+}
+
+.dispositivos-titulo{
+    font-size: 48px;
+}
+
+.lista-item{
+    font-size: 32px;
 }
